--- a/Elenco.html
+++ b/Elenco.html
@@ -21,7 +21,7 @@
             <!-- MENU PRINCIPAL PARA NAVEGAÇÃO -->
 
             <nav class="navbar navbar-expand-md navbar-dark mb-4" style="background-color: #7a001f">
-              <a class="navbar-brand" href="#"><img src="imagens/fundinho.png" alt=""></a>
+              <a class="navbar-brand" href="index.html"><img src="imagens/fundinho.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
