--- a/seasonone.html
+++ b/seasonone.html
@@ -15,11 +15,11 @@
   </head>
 
   <body class="fundo" style="font-family: 'Fonte1';">
-    <div class="modal">
-      <div class="modal_content">
-          <img src="imagens/01.jpg" id="modal_img">
+    <div class="modelo">
+      <div class="modelo_contente">
+          <img src="imagens/img temp1-1.jpg" id="modelo_img">
       </div>
-      <span id="bt_close">&times;</span>
+      <span id="bt_voltar">&#10006;</span>
     </div>
     <div class="container">
       <h1>1ª Temporada</h1>
@@ -27,7 +27,7 @@
         <!-- MENU PRINCIPAL PARA NAVEGAÇÃO -->
           
         <nav class="navbar navbar-expand-md navbar-dark mb-4" style="background-color: #7a001f">
-          <a class="navbar-brand" href="#"><img src="imagens/fundinho.png" alt=""></a>
+          <a class="navbar-brand" href="index.html"><img src="imagens/fundinho.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -65,30 +65,30 @@
 
       <div class="pagina">
         <h2 class="sub1"><a class="oneA" href="index.html">Inicio</a> >> Stranger Things: 1ª Temporada</h2>
-        <h3 class="oneh3">1ª Temporada</h3>
+        <h3 class="treh3">1ª Temporada</h3>
           <p class="onerecuo">99 em cem vezes, a criança desaparecida está com um dos pais ou parente. E da outra vez?</p>
           <p class="onerecuo"> Uma carta de amor aos clássicos sobrenaturais dos anos 80, Stranger Things é a história de um jovem que desaparece no ar. Enquanto amigos, família e polícia local procuram por respostas, eles são atraídos para um mistério extraordinário envolvendo experimentos ultrassecretos do governo, forças. Stranger Things é estrelado por Winona Ryder, David Harbor, Finn Wolfhard, Millie Brown, Gaten Matarazzo, Caleb McLaughlin, Noah Schnapp, Natalia Dyer, Cara Buono, Charlie Heaton e Matthew Modine. Matt Duffer e Ross Duffer (Wayward Pines, Hidden) atuam como roteiristas, diretores e co-showrunners da série e são produtores executivos junto com Shawn Levy e Dan Cohen por meio de seu banner de entretenimento 21 Laps (The Spectacular Now, Night At The Museum , Real Steel, Date Night). Shawn Levy também atua como diretor. Stranger Things é uma série original da Netflix. "</p>
           <p class="onerecuo">Hawkins, Indiana. 1983. Um garoto de 12 anos desaparece misteriosamente. A família e a polícia procuram respostas, mas acabam se deparando com um experimento secreto do governo. Enquanto isso, os amigos do menino iniciam suas próprias investigações, o que os levam a um extraordinário mistério envolvendo forças sobrenaturais e uma garotinha muito, muito estranha.</p>
-          <div class="row">
-            <div class="card_img">
-                <img src="imagens/img temp1-1.jpg" class="small_img">
+          <div class="fileira">
+            <div class="cartao_img">
+                <img src="imagens/img temp1-1.jpg" class="pequena_img">
             </div>
-            <div class="card_img">
-                <img src="imagens/img temp1-2.jpg" class="small_img">
+            <div class="cartao_img">
+                <img src="imagens/img temp1-2.jpg" class="pequena_img">
             </div>
-            <div class="card_img">
-                <img src="imagens/img temp1-3.jpg" class="small_img">
+            <div class="cartao_img">
+                <img src="imagens/img temp1-3.jpg" class="pequena_img">
             </div>
         </div>
-        <div class="row">
-                <div class="card_img">
-                    <img src="imagens/img temp1-4.jpg" class="small_img">
+        <div class="fileira">
+                <div class="cartao_img">
+                    <img src="imagens/img temp1-4.jpg" class="pequena_img">
                 </div>
-                <div class="card_img">
-                    <img src="imagens/img temp1-5.jpg" class="small_img">
+                <div class="cartao_img">
+                    <img src="imagens/img temp1-5.jpg" class="pequena_img">
                 </div>
-                <div class="card_img">
-                    <img src="imagens/img temp1-6.jpg" class="small_img">
+                <div class="cartao_img">
+                    <img src="imagens/img temp1-6.jpg" class="pequena_img">
                 </div>
             </div>
         <h4 class="oneh4">Episodeos</h4>
