--- a/seasonthree.html
+++ b/seasonthree.html
@@ -15,11 +15,11 @@
   </head>
 
   <body class="fundo" style="font-family: 'Fonte1';">
-    <div class="modal">
-      <div class="modal_content">
-          <img src="imagens/01.jpg" id="modal_img">
+    <div class="modelo">
+      <div class="modelo_contente">
+          <img src="imagens/img temp3-1.jpg" id="modelo_img">
       </div>
-      <span id="bt_close">&times;</span>
+      <span id="bt_voltar">&#10006;</span>
     </div>
     <div class="container">
       <h1>Inicio</h1>
@@ -27,7 +27,7 @@
         <!-- MENU PRINCIPAL PARA NAVEGAÇÃO -->
           
         <nav class="navbar navbar-expand-md navbar-dark mb-4" style="background-color: #7a001f">
-          <a class="navbar-brand" href="#"><img src="imagens/fundinho.png" alt=""></a>
+          <a class="navbar-brand" href="index.html"><img src="imagens/fundinho.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -66,27 +66,27 @@
         <h3 class="treh3">3ª Temporada</h3>
         <p class="treP">É 1985 em Hawkins , Indiana , e o verão está esquentando. Acabou a escola, há um shopping center novo na cidade e a equipe de Hawkins está à beira da idade adulta. O romance floresce e complica a dinâmica do grupo , e eles terão que descobrir como crescer sem se separar. </p>
         <p class="treP">Enquanto isso, o perigo se aproxima. Quando a cidade é ameaçada por inimigos novos e antigos, Eleven e seus amigos são lembrados de que o mal nunca termina; ele evolui. Agora eles terão que se unir para sobreviver e lembrar que a amizade é sempre mais forte do que o medo.</p>
-        <div class="row">
-          <div class="card_img">
-              <img src="imagens/img temp3-1.jpg" class="small_img">
+        <div class="fileira">
+          <div class="cartao_img">
+              <img src="imagens/img temp3-1.jpg" class="pequena_img">
           </div>
-          <div class="card_img">
-              <img src="imagens/img temp3-2.jpg" class="small_img">
+          <div class="cartao_img">
+              <img src="imagens/img temp3-2.jpg" class="pequena_img">
           </div>
-          <div class="card_img">
-              <img src="imagens/img temp3-3.jpg" class="small_img">
+          <div class="cartao_img">
+              <img src="imagens/img temp3-3.jpg" class="pequena_img">
           </div>
-      </div>
-      <div class="row">
-              <div class="card_img">
-                  <img src="imagens/img temp3-4.jpg" class="small_img">
-              </div>
-              <div class="card_img">
-                  <img src="imagens/img temp3-5.jpg" class="small_img">
-              </div>
-              <div class="card_img">
-                  <img src="imagens/img temp3-6.jpg" class="small_img">
-              </div>
+        </div>
+        <div class="fileira">
+                <div class="cartao_img">
+                    <img src="imagens/img temp3-4.jpg" class="pequena_img">
+                </div>
+                <div class="cartao_img">
+                    <img src="imagens/img temp3-5.jpg" class="pequena_img">
+                </div>
+                <div class="cartao_img">
+                    <img src="imagens/img temp3-6.jpg" class="pequena_img">
+                </div>
           </div>
         <h4 class="treh4">Episodeos</h4>
         <ol class="treOl">
