--- a/seasontwo.html
+++ b/seasontwo.html
@@ -15,11 +15,11 @@
   </head>
 
   <body class="fundo" style="font-family: 'Fonte1';">
-    <div class="modal">
-      <div class="modal_content">
-          <img src="imagens/01.jpg" id="modal_img">
+    <div class="modelo">
+      <div class="modelo_contente">
+          <img src="imagens/img temp2-1.jpg" id="modelo_img">
       </div>
-      <span id="bt_close">&times;</span>
+      <span id="bt_voltar">&#10006;</span>
     </div>
     <div class="container">
       <h1>Inicio</h1>
@@ -27,7 +27,7 @@
         <!-- MENU PRINCIPAL PARA NAVEGAÇÃO -->
           
         <nav class="navbar navbar-expand-md navbar-dark mb-4" style="background-color: #7a001f">
-          <a class="navbar-brand" href="#"><img src="imagens/fundinho.png" alt=""></a>
+          <a class="navbar-brand" href="index.html"><img src="imagens/fundinho.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -63,29 +63,29 @@
       <!-- FIM MENU -->
       <div class="pagina">
         <h2 class="sub1"><a class="oneA" href="index.html">Inicio</a> >> Stranger Things: 2ª Temporada</h2>
-        <h3>2ª Temporada</h3>
+        <h3 class="treh3">2ª Temporada</h3>
         <p class="tworecuo">Stranger Things 2 foi confirmado pela Netflix em 31 de agosto de 2016 para um lançamento de 2017. Um trailer de anúncio revelou que a segunda temporada consistiu em nove episódios, além de mostrar o título provisório de cada episódio. As filmagens da temporada começaram em Atlanta, Geórgia, em 7 de novembro de 2016.</p>
         <p class="tworecuo">Estamos em 1984 e os cidadãos de Hawkins , Indiana ainda estão se recuperando dos horrores do Demogorgon e dos segredos do Laboratório Hawkins . Will Byers foi resgatado do Upside Down, mas uma entidade maior e sinistra ainda ameaça aqueles que sobreviveram.</p>
-        <div class="row">
-          <div class="card_img">
-              <img src="imagens/img temp2-1.jpg" class="small_img">
+        <div class="fileira">
+          <div class="cartao_img">
+              <img src="imagens/img temp2-1.jpg" class="pequena_img">
           </div>
-          <div class="card_img">
-              <img src="imagens/img temp2-2.jpg" class="small_img">
+          <div class="cartao_img">
+              <img src="imagens/img temp2-2.jpg" class="pequena_img">
           </div>
-          <div class="card_img">
-              <img src="imagens/img not2-3.jpg" class="small_img">
+          <div class="cartao_img">
+              <img src="imagens/img not2-3.jpg" class="pequena_img">
           </div>
         </div>
-        <div class="row">
-          <div class="card_img">
-            <img src="imagens/img temp2-4.jpg" class="small_img">
+        <div class="fileira">
+          <div class="cartao_img">
+            <img src="imagens/img temp2-4.jpg" class="pequena_img">
           </div>
-          <div class="card_img">
-            <img src="imagens/img temp2-5.jpg" class="small_img">
+          <div class="cartao_img">
+            <img src="imagens/img temp2-5.jpg" class="pequena_img">
           </div>
-              <div class="card_img">
-                  <img src="imagens/img temp2-6.jpg" class="small_img">
+              <div class="cartao_img">
+                  <img src="imagens/img temp2-6.jpg" class="pequena_img">
               </div>
           </div>
           <h4 class="twoh4">Episodeos</h4>
