--- a/noticiaTwo.html
+++ b/noticiaTwo.html
@@ -20,7 +20,7 @@
         <!-- MENU PRINCIPAL PARA NAVEGAÇÃO -->
           
         <nav class="navbar navbar-expand-md navbar-dark mb-4" style="background-color: #7a001f">
-          <a class="navbar-brand" href="#"><img src="imagens/fundinho.png" alt=""></a>
+          <a class="navbar-brand" href="index.html"><img src="imagens/fundinho.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -86,7 +86,7 @@
       <!-- RODAPÉ -->  
 
       <div id="footer">
-        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a><a href="https://github.com/mat1135"><img class="imgfooter img-fluid" src="imagens/GitHub-logo.png"></a></p>     
+        <p><i>Copyright ©2021 - by Matheus Oliveira</i><a href="https://www.instagram.com/matheusfoliveira_/?hl=pt-br" target="_blank"><img class="imgfooter img-fluid" src="imagens/instagram_logo.png"></a><a href="https://github.com/mat1135" target="_blank"><img class="imgfooter img-fluid" src="imagens/GitHub-logo.png"></a></p>     
       </div>
       <!-- JavaScript (Opcional) -->
       <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
